--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "sistemaescolarbackend",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+"scripts": {
+  "start": "node server.js",
+  "test": "echo \"No tests specified\""
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
